--- a/index.html
+++ b/index.html
@@ -14,23 +14,65 @@
         let markedUpHTML = marked(editorValue);
         previewElement.innerHTML = markedUpHTML;
       }
+
+      function setDefault() {
+        let defaultText = `\
+# davvoh 
+## a markdown previewer
+[a link to google](https://www.google.com/)
+<dl>
+  <dt>Definition List</dt>
+  <dd>Is something people use sometimes.</dd>
+
+  <dt>Markdown in HTML</dt>
+  <dd>Does *not* work everywhere well. Use HTML.</dd>
+</dl>
+
+\`This is an example of an inline code!\`
+
+\`\`\`
+function exampleOf() {
+  return multiLineCodeBlock;
+}
+\`\`\`
+
+- This
+- Is
+- An
+- Example
+- Of
+- List
+- Items
+
+> This is an example of block quote
+
+**This text is bolded, how cool is that?**
+
+![davvoh](https://spaceplace.nasa.gov/resources/homepage/featured/all-about-exoplanets.jpg)
+        `;
+        let editorField = document.getElementById("editor");
+        editorField.value = defaultText;
+        previewElement.innerHTML = marked(defaultText);
+      }
     </script>
   </head>
 
-  <body>
+  <body onload="setDefault()" class="bg-success">
     <div class="container-fluid">
       <div class="row">
-        <div class="col text-center text-white bg-success">
+        <div class="col text-center text-white bg-success py-2">
           <h1>Markdown Previewer by davvoh</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-6 bg-info">
-          <p>The editor will be here</p>
-          <textarea id="editor" onkeyup="updatePreview()"></textarea>
+        <div class="col-6 bg-primary d-flex flex-column">
+          <h2 class="text-white text-center my-3">Editor</h2>
+          <div class="form-group flex-grow-1 d-flex flex-column">
+            <textarea id="editor" onkeyup="updatePreview()" class="form-control flex-grow-1"></textarea>
+          </div>  
         </div>
-        <div class="col-6 bg-warning">
-          <p>The previewer will be here</p>
+        <div class="col-6 bg-danger">
+          <h2 class="text-white text-center my-3">Preview</h2>
           <div id="preview"></div>
         </div>
       </div>
