--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         let editorValue = document.getElementById("editor").value;
         let markedUpHTML = marked(editorValue);
         previewElement.innerHTML = markedUpHTML;
-      }
+      };
 
       function setDefault() {
         let defaultText = `\
@@ -52,6 +52,7 @@ function exampleOf() {
         `;
         let editorField = document.getElementById("editor");
         editorField.value = defaultText;
+        let previewElement = document.getElementById("preview");
         previewElement.innerHTML = marked(defaultText);
       }
     </script>
@@ -65,15 +66,15 @@ function exampleOf() {
         </div>
       </div>
       <div class="row">
-        <div class="col-6 bg-primary d-flex flex-column">
+        <div class="col-6 bg-primary d-flex flex-column border border-warning">
           <h2 class="text-white text-center my-3">Editor</h2>
           <div class="form-group flex-grow-1 d-flex flex-column">
-            <textarea id="editor" onkeyup="updatePreview()" class="form-control flex-grow-1"></textarea>
+            <textarea id="editor" onkeyup="updatePreview()" class="form-control flex-grow-1 min-vh-100"></textarea>
           </div>  
         </div>
-        <div class="col-6 bg-danger">
+        <div class="col-6 bg-danger border border-warning">
           <h2 class="text-white text-center my-3">Preview</h2>
-          <div id="preview"></div>
+          <div id="preview" class="border border-dark border-3 rounded bg-light"></div>
         </div>
       </div>
     </div>
